// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`migrateWranglerToCf > blocks Vite environments that conflict with default modes > cloudflare.config.ts 1`] = `
"import { bindings, defineConfig } from "cf/config";

/**
 * Wrangler environments are selected through ctx.mode and the cf --mode flag.
 * @see https://developers.cloudflare.com/workers/wrangler/environments/
 */

/**
 * This migration needs manual work. Resolve every TODO in this file, then remove the error below.
 */
/**
 * TODO(@cloudflare): cf migrate: env.development: The Wrangler environment \`development\` conflicts with Vite's default \`development\` mode. Rename or remap this environment before using the generated config so Vite does not select it implicitly.
 * @see https://developers.cloudflare.com/workers/wrangler/environments/
 */
/**
 * TODO(@cloudflare): cf migrate: env.production: The Wrangler environment \`production\` conflicts with Vite's default \`production\` mode. Rename or remap this environment before using the generated config so Vite does not select it implicitly.
 * @see https://developers.cloudflare.com/workers/wrangler/environments/
 */
throw new Error("Migration incomplete. Resolve every cf migrate TODO in \`cloudflare.config.ts\`.");

export default defineConfig((ctx) => {
	switch (ctx.mode) {
		case "development": {
			return {
				worker: {
					name: "example-worker-development",
					compatibilityDate: "2026-09-23",
					env: {
						MODE: bindings.text("development"),
					},
				},
			};
		}
		case "production": {
			return {
				worker: {
					name: "example-worker-production",
					compatibilityDate: "2026-09-23",
					env: {
						MODE: bindings.text("production"),
					},
				},
			};
		}
		default: {
			return {
				worker: {
					name: "example-worker",
					compatibilityDate: "2026-09-23",
				},
			};
		}
	}
});
"
`;

exports[`migrateWranglerToCf > does not create \`wrangler.config.ts\` for the Vite bundler > cloudflare.config.ts 1`] = `
"import { defineConfig } from "cf/config";

/**
 * This migration needs manual work. Resolve every TODO in this file, then remove the error below.
 */
/**
 * TODO(@cloudflare): cf migrate: dev,rules: Wrangler-specific tooling fields were not migrated because the Vite bundler is selected: dev, rules.
 */
/**
 * TODO(@cloudflare): cf migrate: previews.define: Wrangler-specific tooling fields in previews were not migrated because the Vite bundler is selected: define.
 */
/**
 * TODO(@cloudflare): cf migrate: previews: Preview configuration was converted to \`ctx.isPreview\` handling. Review the generated Preview branch.
 * @see https://developers.cloudflare.com/workers/wrangler/configuration/#previews
 */
throw new Error("Migration incomplete. Resolve every cf migrate TODO in \`cloudflare.config.ts\`.");

export default defineConfig((ctx) => {
	if (ctx.isPreview) {
		return {
			worker: {
				name: "example-worker",
				compatibilityDate: "2026-09-23",
			},
		};
	}
	return {
		worker: {
			name: "example-worker",
			compatibilityDate: "2026-09-23",
			/**
			 * TODO(@cloudflare): cf migrate: Preview configuration was converted to \`ctx.isPreview\` handling. Review the generated Preview branch.
			 * @see https://developers.cloudflare.com/workers/wrangler/configuration/#previews
			 */
		},
	};
});
"
`;

exports[`migrateWranglerToCf > does not inherit base defines into named environment tooling > wrangler.config.ts 1`] = `
"import { defineWranglerConfig } from "wrangler/experimental-config";

export default defineWranglerConfig((ctx) => {
	switch (ctx.mode) {
		case "staging": {
			return {};
		}
		default: {
			return {
				define: {
					BASE_ONLY: "\\"base\\"",
				},
			};
		}
	}
});
"
`;

exports[`migrateWranglerToCf > does not inherit non-inheritable bindings into previews > cloudflare.config.ts 1`] = `
"import { bindings, defineConfig } from "cf/config";

/**
 * This migration needs manual work. Resolve every TODO in this file, then remove the error below.
 */
/**
 * TODO(@cloudflare): cf migrate: previews: Preview configuration was converted to \`ctx.isPreview\` handling. Review the generated Preview branch.
 * @see https://developers.cloudflare.com/workers/wrangler/configuration/#previews
 */
throw new Error("Migration incomplete. Resolve every cf migrate TODO in \`cloudflare.config.ts\`.");

export default defineConfig((ctx) => {
	if (ctx.isPreview) {
		return {
			worker: {
				name: "example-worker",
				compatibilityDate: "2026-09-23",
				env: {
					MODE: bindings.text("preview"),
				},
			},
		};
	}
	return {
		worker: {
			name: "example-worker",
			compatibilityDate: "2026-09-23",
			env: {
				CACHE: bindings.kv({
					id: "production-cache",
				}),
			},
			/**
			 * TODO(@cloudflare): cf migrate: Preview configuration was converted to \`ctx.isPreview\` handling. Review the generated Preview branch.
			 * @see https://developers.cloudflare.com/workers/wrangler/configuration/#previews
			 */
		},
	};
});
"
`;

exports[`migrateWranglerToCf > inherits log forwarding bindings into environments and previews > cloudflare.config.ts 1`] = `
"import { bindings, defineConfig } from "cf/config";

/**
 * Wrangler environments are selected through ctx.mode and the cf --mode flag.
 * @see https://developers.cloudflare.com/workers/wrangler/environments/
 */

/**
 * This migration needs manual work. Resolve every TODO in this file, then remove the error below.
 */
/**
 * TODO(@cloudflare): cf migrate: env.staging.previews: Preview configuration was converted to \`ctx.isPreview\` handling. Review the generated Preview branch.
 * @see https://developers.cloudflare.com/workers/wrangler/configuration/#previews
 */
throw new Error("Migration incomplete. Resolve every cf migrate TODO in \`cloudflare.config.ts\`.");

export default defineConfig((ctx) => {
	switch (ctx.mode) {
		case "staging": {
			if (ctx.isPreview) {
				return {
					worker: {
						name: "example-worker-staging",
						compatibilityDate: "2026-09-23",
						env: {
							MODE: bindings.text("preview"),
							LOGS: bindings.logfwdr({
								destination: "logs",
							}),
						},
					},
				};
			}
			return {
				worker: {
					name: "example-worker-staging",
					compatibilityDate: "2026-09-23",
					env: {
						LOGS: bindings.logfwdr({
							destination: "logs",
						}),
					},
					/**
					 * TODO(@cloudflare): cf migrate: Preview configuration was converted to \`ctx.isPreview\` handling. Review the generated Preview branch.
					 * @see https://developers.cloudflare.com/workers/wrangler/configuration/#previews
					 */
				},
			};
		}
		default: {
			return {
				worker: {
					name: "example-worker",
					compatibilityDate: "2026-09-23",
					env: {
						LOGS: bindings.logfwdr({
							destination: "logs",
						}),
					},
				},
			};
		}
	}
});
"
`;

exports[`migrateWranglerToCf > leaves guarded TODOs for unsupported resource migrations > cloudflare.config.ts 1`] = `
"import { bindings, defineConfig } from "cf/config";

/**
 * This migration needs manual work. Resolve every TODO in this file, then remove the error below.
 */
/**
 * TODO(@cloudflare): cf migrate: hyperdrive.0: The options \`localConnectionString\` at \`hyperdrive.0\` require manual migration.
 */
/**
 * TODO(@cloudflare): cf migrate: durable_objects.bindings.0: Durable Object bindings require manual review after migration.
 * @see https://developers.cloudflare.com/workers/runtime-apis/context/#exports
 */
/**
 * TODO(@cloudflare): cf migrate: workflows: Workflow bindings are not supported by the new config and were not migrated.
 */
/**
 * TODO(@cloudflare): cf migrate: migrations: Wrangler Durable Object migrations are unsupported. Replace them with an exports lifecycle declaration, for example \`exports: { MyDurableObject: exports.durableObject({ storage: "sqlite" }) }\`.
 * @see https://developers.cloudflare.com/workers/runtime-apis/context/#exports
 */
/**
 * TODO(@cloudflare): cf migrate: containers: Containers require manual review and were not migrated.
 */
throw new Error("Migration incomplete. Resolve every cf migrate TODO in \`cloudflare.config.ts\`.");

export default defineConfig({
	worker: {
		name: "example-worker",
		compatibilityDate: "2026-09-23",
		env: {
			DATABASE: bindings.hyperdrive({
				id: "hyperdrive-id",
			}),
			COUNTER: bindings.durableObject({
				worker: "example-worker",
				exportName: "Counter",
			}),
		},
		/**
		 * TODO(@cloudflare): cf migrate: The options \`localConnectionString\` at \`hyperdrive.0\` require manual migration.
		 */
		/**
		 * TODO(@cloudflare): cf migrate: Durable Object bindings require manual review after migration.
		 * @see https://developers.cloudflare.com/workers/runtime-apis/context/#exports
		 */
		/**
		 * TODO(@cloudflare): cf migrate: Workflow bindings are not supported by the new config and were not migrated.
		 */
		/**
		 * TODO(@cloudflare): cf migrate: Wrangler Durable Object migrations are unsupported. Replace them with an exports lifecycle declaration, for example \`exports: { MyDurableObject: exports.durableObject({ storage: "sqlite" }) }\`.
		 * @see https://developers.cloudflare.com/workers/runtime-apis/context/#exports
		 */
		/**
		 * TODO(@cloudflare): cf migrate: Containers require manual review and were not migrated.
		 */
	},
});
"
`;

exports[`migrateWranglerToCf > migrates each Worker in a multi-Worker project independently > auth/cloudflare.config.ts 1`] = `
"import { defineConfig } from "cf/config";

export default defineConfig({
	worker: {
		name: "auth-worker",
		compatibilityDate: "2026-09-23",
		entrypoint: "src/index.ts",
	},
});
"
`;

exports[`migrateWranglerToCf > migrates each Worker in a multi-Worker project independently > entry/cloudflare.config.ts 1`] = `
"import { bindings, defineConfig } from "cf/config";

export default defineConfig({
	worker: {
		name: "entry-worker",
		compatibilityDate: "2026-09-23",
		entrypoint: "src/index.ts",
		tailConsumers: [
			{
				worker: "tail-worker",
			},
		],
		env: {
			AUTH: bindings.worker({
				worker: "auth-worker",
			}),
			AUTH_ADMIN: bindings.worker({
				worker: "auth-worker",
				exportName: "Admin",
			}),
		},
	},
});
"
`;

exports[`migrateWranglerToCf > migrates environments, compliance, previews, and warns without reading secret files > cloudflare.config.ts 1`] = `
"import { bindings, defineConfig } from "cf/config";

/**
 * Secret-like files were detected but not read or migrated: .env.example. Only \`secrets.required\` entries are migrated.
 * @see https://developers.cloudflare.com/workers/configuration/secrets/
 */

/**
 * Wrangler environments are selected through ctx.mode and the cf --mode flag.
 * @see https://developers.cloudflare.com/workers/wrangler/environments/
 */

/**
 * This migration needs manual work. Resolve every TODO in this file, then remove the error below.
 */
/**
 * TODO(@cloudflare): cf migrate: env.staging.previews: Preview configuration was converted to \`ctx.isPreview\` handling. Review the generated Preview branch.
 * @see https://developers.cloudflare.com/workers/wrangler/configuration/#previews
 */
throw new Error("Migration incomplete. Resolve every cf migrate TODO in \`cloudflare.config.ts\`.");

export default defineConfig((ctx) => {
	switch (ctx.mode) {
		case "staging": {
			if (ctx.isPreview) {
				return {
					complianceRegion: "fedramp-high",
					worker: {
						name: "example-worker-staging",
						compatibilityDate: "2026-09-23",
						env: {
							PREVIEW: bindings.text("yes"),
						},
					},
				};
			}
			return {
				complianceRegion: "fedramp-high",
				worker: {
					name: "example-worker-staging",
					compatibilityDate: "2026-09-23",
					env: {
						MODE: bindings.text("staging"),
					},
					/**
					 * TODO(@cloudflare): cf migrate: Preview configuration was converted to \`ctx.isPreview\` handling. Review the generated Preview branch.
					 * @see https://developers.cloudflare.com/workers/wrangler/configuration/#previews
					 */
				},
			};
		}
		default: {
			return {
				worker: {
					name: "example-worker",
					compatibilityDate: "2026-09-23",
				},
			};
		}
	}
});
"
`;

exports[`migrateWranglerToCf > migrates preview-only Wrangler tooling without inheriting production defines > cloudflare.config.ts 1`] = `
"import { bindings, defineConfig } from "cf/config";

/**
 * Wrangler environments are selected through ctx.mode and the cf --mode flag.
 * @see https://developers.cloudflare.com/workers/wrangler/environments/
 */

/**
 * This migration needs manual work. Resolve every TODO in this file, then remove the error below.
 */
/**
 * TODO(@cloudflare): cf migrate: previews: Preview configuration was converted to \`ctx.isPreview\` handling. Review the generated Preview branch.
 * @see https://developers.cloudflare.com/workers/wrangler/configuration/#previews
 */
/**
 * TODO(@cloudflare): cf migrate: env.staging.previews: Preview configuration was converted to \`ctx.isPreview\` handling. Review the generated Preview branch.
 * @see https://developers.cloudflare.com/workers/wrangler/configuration/#previews
 */
throw new Error("Migration incomplete. Resolve every cf migrate TODO in \`cloudflare.config.ts\`.");

export default defineConfig((ctx) => {
	switch (ctx.mode) {
		case "staging": {
			if (ctx.isPreview) {
				return {
					worker: {
						name: "example-worker-staging",
						compatibilityDate: "2026-09-23",
						env: {
							MODE: bindings.text("preview"),
						},
					},
				};
			}
			return {
				worker: {
					name: "example-worker-staging",
					compatibilityDate: "2026-09-23",
					/**
					 * TODO(@cloudflare): cf migrate: Preview configuration was converted to \`ctx.isPreview\` handling. Review the generated Preview branch.
					 * @see https://developers.cloudflare.com/workers/wrangler/configuration/#previews
					 */
				},
			};
		}
		default: {
			if (ctx.isPreview) {
				return {
					worker: {
						name: "example-worker",
						compatibilityDate: "2026-09-23",
					},
				};
			}
			return {
				worker: {
					name: "example-worker",
					compatibilityDate: "2026-09-23",
					/**
					 * TODO(@cloudflare): cf migrate: Preview configuration was converted to \`ctx.isPreview\` handling. Review the generated Preview branch.
					 * @see https://developers.cloudflare.com/workers/wrangler/configuration/#previews
					 */
				},
			};
		}
	}
});
"
`;

exports[`migrateWranglerToCf > migrates preview-only Wrangler tooling without inheriting production defines > wrangler.config.ts 1`] = `
"import { defineWranglerConfig } from "wrangler/experimental-config";

export default defineWranglerConfig((ctx) => {
	switch (ctx.mode) {
		case "staging": {
			if (ctx.isPreview) {
				return {};
			}
			return {
				define: {
					PRODUCTION_ONLY: "\\"production\\"",
				},
			};
		}
		default: {
			if (ctx.isPreview) {
				return {
					define: {
						PREVIEW_ONLY: "\\"preview\\"",
					},
				};
			}
			return {};
		}
	}
});
"
`;

exports[`migrateWranglerToCf > writes Wrangler tooling config only when requested and needed > cloudflare.config.ts 1`] = `
"import { defineConfig } from "cf/config";

export default defineConfig({
	worker: {
		name: "example-worker",
		compatibilityDate: "2026-09-23",
		assets: {
			htmlHandling: "auto-trailing-slash",
		},
	},
});
"
`;

exports[`migrateWranglerToCf > writes Wrangler tooling config only when requested and needed > wrangler.config.ts 1`] = `
"import { defineWranglerConfig } from "wrangler/experimental-config";

export default defineWranglerConfig({
	noBundle: true,
	rules: [
		{
			globs: [
				"**/*.txt",
			],
			type: "Text",
		},
	],
	dev: {
		port: 9000,
	},
	assetsDirectory: "public",
});
"
`;

exports[`migrateWranglerToCf > writes a complete Vite config with optional options omitted > cloudflare.config.ts 1`] = `
"import { bindings, defineConfig, triggers } from "cf/config";

export default defineConfig({
	accountId: "account-id",
	worker: {
		name: "example-worker",
		compatibilityDate: "2026-09-23",
		entrypoint: "src/index.ts",
		triggers: [
			triggers.fetch({
				pattern: "example.com/*",
			}),
			triggers.scheduled({
				schedule: "0 * * * *",
			}),
		],
		env: {
			TEXT: bindings.text("value"),
			JSON: bindings.json({
				enabled: true,
			}),
			API_TOKEN: bindings.secret(),
			CACHE: bindings.kv({
				id: "abc",
			}),
		},
	},
});
"
`;
